<resources>
    <string name="app_name">休闲小游戏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_bottom_tab_game">游戏</string>
    <string name="main_bottom_tab_chat">消息</string>
    <string name="main_bottom_tab_matching">匹配</string>
    <string name="main_bottom_tab_find">发现</string>
    <string name="main_bottom_tab_mine">我的</string>

    <string name="game_menu_rank">排行榜</string>
    <string name="game_menu_cook_house">厨房</string>
    <string name="game_menu_room">任务</string>
    <string name="game_menu_contact">交往</string>
    <string name="game_menu_task">任务</string>
    <string name="game_double_title">双人小游戏</string>
    <string name="game_double_more">更多</string>
    <string name="game_double_a_title">斗兽棋</string>
    <string name="game_double_b_title">青蛙回家</string>
    <string name="game_double_c_title">跳一跳</string>

    <string name="chat_recommend_title">推荐</string>
    <string name="chat_interactive_message_title">互动消息</string>
    <string name="message_discuss_title">评论</string>
    <string name="message_like_title">赞</string>
    <string name="message_at_title">"@我的"</string>

    <!--匹配-->
    <string name="matching_pressed_tips">点击头像，开始匹配</string>
    <string name="matching_game_matching_dialog_title">游戏匹配</string>
    <string name="matching_game_random_matching">随机匹配</string>
    <string name="matching_game_filter_matching">筛选匹配</string>
    <string name="matching_player_matching_tips">正在匹配中...</string>
    <string name="matching_player_matching_sucess_tips">匹配成功，准备开始</string>

    <!--我的-->
    <string name="mine_play_num_title">约玩号:</string>
    <string name="mine_circle_of_friends_title">我的朋友圈</string>
    <string name="mine_grade_title">我的成绩</string>
    <string name="mine_shop_title">商店</string>
    <string name="mine_real_name_certification_title">实名认证</string>
    <string name="mine_game_rule_title">游戏规则</string>
    <string name="mine_customer_service_title">客服</string>
    <string name="mine_setting_title">设置</string>
    <string name="mine_fans_title">粉丝</string>
    <string name="mine_follow_title">关注</string>
    <string name="mine_dynamic_title">动态</string>

    <!--排行榜-->
    <string name="rank_today_flowers_title">今日收花</string>
    <string name="rank_yestoday_flowers_title">昨日收花</string>
    <string name="rank_celebrity_list_title">名人榜</string>

    <string name="login_type_wechat">微信</string>
    <string name="login_type_qq">QQ</string>
    <string name="login_type_phone">手机</string>
    <string name="login_type_agreement">已同意用户协议</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_v_code">请输入验证码</string>
    <string name="login_v_code_2">验证码已发送到</string>
    <string name="login_v_code_3">重发验证码(56秒)</string>
    <string name="login_password">请输入密码</string>
    <string name="login_password_2">忘记了?找回密码</string>
    <string name="login_password_3">请设置新登录密码</string>
    <string name="login_userinfo_nickname">昵称</string>
    <string name="login_userinfo_nickname_hint">请输入昵称</string>
    <string name="login_userinfo_sex">性别</string>
    <string name="login_userinfo_man">男</string>
    <string name="login_userinfo_woman">女</string>
    <string name="login_userinfo_age">年龄</string>
    <string name="login_userinfo_age_hint">请设置年龄</string>
    <string name="login_userinfo_city">城市</string>
    <string name="login_userinfo_city_hint">请设置城市</string>

    <string name="mine_sign_edit">请输入个性签名</string>
    <string name="mine_sign_num_edit">/30</string>
    <string name="mine_worth_edit">身价设置</string>
    <string name="mine_nickname_edit">请输入昵称</string>
    <string name="mine_nickname_num_edit">/12</string>
    <string name="mine_worth_value1_edit">免费</string>
    <string name="mine_worth_value2_edit">1花</string>
    <string name="mine_worth_value3_edit">5花</string>
    <string name="mine_worth_value4_edit">20花</string>
    <string name="mine_worth_value5_edit">50花</string>
    <string name="mine_worth_value6_edit">100花</string>
    <string name="mine_worth_value7_edit">200花</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>


    <string name="period_now">刚刚</string>
    <string name="mypost_timer_now">now</string>
    <string name="mypost_timer_minute">min</string>
    <string name="mypost_timer_hour">hour</string>
    <string name="mypost_timer_day">day</string>
    <string name="mypost_timer_minutes">mins</string>
    <string name="mypost_timer_hours">hours</string>
    <string name="mypost_timer_days">days</string>
    <string name="mypost_timer_months">months</string>
    <string name="mypost_timer_years">years</string>
    <string name="topic_detail_storey_1">沙发</string>
    <string name="topic_detail_storey_2">板凳</string>
    <string name="topic_detail_storey_3">地板</string>
    <string name="topic_detail_storey">楼</string>
    <string name="version_unknown">未知</string>
    <string name="duang_comment_count_title">评论</string>
    <string name="my_send_content_hint">分享照片</string>

    <string name="userinfo_fans">粉丝</string>
    <string name="userinfo_follow">关注</string>
    <string name="userinfo_dynamic">动态</string>
    <string name="userinfo_game">游戏</string>
    <string name="userinfo_personality_signature">个性签名</string>
    <string name="userinfo_often_play">最近常玩</string>
    <string name="userinfo_gift">礼物</string>

    <string name="userinfo_edit_basic_info">基本资料</string>
    <string name="userinfo_edit_submit">保存</string>
    <string name="userinfo_edit_header">头像</string>
    <string name="userinfo_edit_name">昵称</string>
    <string name="userinfo_edit_sex">性别</string>
    <string name="userinfo_edit_age">年龄</string>
    <string name="userinfo_edit_city">位置</string>
    <string name="userinfo_edit_signature">个性签名</string>
    <string name="userinfo_edit_wealth">财富</string>
    <string name="userinfo_edit_worth">身价</string>
    <string name="userinfo_edit_complete">完成</string>
    <string name="userinfo_edit_signature_hint">最没个性的个性签名</string>

    <string name="userinfo_fens_title">我的粉丝</string>

    <string name="setting_title">设置</string>
    <string name="setting_notice_set">通知设置</string>
    <string name="setting_worth_set">身价设置</string>
    <string name="setting_privacy">隐私</string>
    <string name="setting_wipe_cache">清除缓存</string>
    <string name="setting_help_advice">帮助与建议</string>
    <string name="setting_user_protocol">用户协议</string>
    <string name="setting_about">关于</string>
    <string name="setting_exit_logon">退出登录</string>
    <string name="setting_help_problem">热门问题</string>
    <string name="setting_help_problem1">1.充值的办法</string>
    <string name="setting_help_problem2">2.忘记密码怎么办</string>
    <string name="setting_help_problem3">3.鲜花怎么购买</string>
    <string name="setting_help_problem4">4.游戏玩法</string>
    <string name="setting_help_problem5">其他问题，留言提问</string>
    <string name="setting_notice_manage">通知管理</string>
    <string name="setting_notice_manage_1">接收推送通知</string>
    <string name="setting_notice_manage_2">互动通知</string>
    <string name="setting_notice_manage_praise">赞</string>
    <string name="setting_notice_manage_comment">评论</string>
    <string name="setting_notice_manage_follow">关注</string>
    <string name="setting_notice_manage_all">"&#064;"</string>
    <string name="setting_privacy_title">隐私设置</string>
    <string name="setting_privacy1">允许通讯录好友找到我</string>
    <string name="setting_privacy2">黑名单管理</string>
    <string name="setting_game_rule_title">游戏规则</string>
    <string name="setting_game_rule_introduce">1.游戏介绍</string>
    <string name="setting_game_rule_friends">2.游戏好友</string>
    <string name="setting_game_rule_gold">3.游戏金币</string>
    <string name="setting_game_rule_kitchen">4.厨房</string>
    <string name="setting_game_rule_contact">5.交往</string>

    <string name="setting_certification_title">实名认证</string>
    <string name="setting_certification_name">真实姓名</string>
    <string name="setting_certification_name2">请输入您的真实姓名</string>
    <string name="setting_certification_id_number">身份证号</string>
    <string name="setting_certification_id_number2">请输入您的身份证号</string>
    <string name="setting_certification_authentication">认证</string>

    <string name="setting_blacklist_1">你还没有拉黑他人</string>
    <string name="setting_quiz_title">留言提问</string>
    <string name="setting_quiz_set">发送</string>
    <string name="setting_quiz_1">你好，请将问题写在框中</string>
    <string name="setting_quiz_2">请填写qq或电话</string>
    <string name="setting_quiz_3">您的联系方式有助于我们沟通和解决问题，仅工作人员能见</string>



    <string name="title_other_btn">取消</string>
    <string name="take_pictures">拍照</string>
    <string name="photo_check">相册选择</string>
</resources>