<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_50">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="60dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:src="@mipmap/login_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_privacy2"
            android:textColor="@color/common_333333"
            android:textSize="@dimen/space_18" />


        <LinearLayout
            android:id="@+id/ll_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:gravity="right">

            <TextView
                android:id="@+id/iv_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:text="@string/setting_quiz_set"
                android:textColor="@color/common_666666"
                android:textSize="@dimen/space_16" />
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/divider_gradient_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_250"
        android:layout_margin="@dimen/space_15"

        >

        <EditText
            android:id="@+id/et_quiz_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@null"
            android:hint="@string/setting_quiz_1"
            android:maxLines="6"
            android:textColor="@color/common_666666"
            android:textColorHint="@color/common_9d9d9d"
            android:textSize="@dimen/space_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <com.weile.casualgames.view.widget.DragLinearView
                android:id="@+id/dragLinerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </FrameLayout>

    <View style="@style/divider_space" />

    <RelativeLayout
        android:id="@+id/rl_setting_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginRight="@dimen/space_15"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_quiz_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/setting_quiz_2"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/common_666666"
            android:textColorHint="@color/common_9d9d9d"
            android:textSize="@dimen/space_16" />


    </RelativeLayout>


    <View style="@style/divider_space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/setting_quiz_3"
        android:textColor="@color/common_666666"
        android:textSize="@dimen/space_12" />

</LinearLayout>
