<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_50">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="60dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:src="@mipmap/login_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/userinfo_edit_signature"
            android:textColor="@color/common_333333"
            android:textSize="@dimen/space_18" />


        <LinearLayout
            android:id="@+id/ll_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/iv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:text="@string/userinfo_edit_complete"
                android:textColor="@color/common_666666"
                android:textSize="@dimen/space_16" />
        </LinearLayout>
    </RelativeLayout>

    <View style="@style/divider_gradient_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:layout_margin="@dimen/space_15">

        <EditText
            android:id="@+id/et_sign_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@null"
            android:hint="@string/mine_sign_edit"
            android:maxLength="30"
            android:textColor="@color/common_666666"
            android:textColorHint="@color/common_9d9d9d"
            android:textSize="@dimen/space_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sign_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                android:textColor="@color/common_999999"
                android:textColorHint="@color/common_999999"
                android:textSize="@dimen/space_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_sign_num_edit"
                android:textColor="@color/common_999999"
                android:textSize="@dimen/space_14" />
        </LinearLayout>
    </FrameLayout>

    <View
        style="@style/divider_line"
        android:layout_marginLeft="@dimen/space_15" />
</LinearLayout>
