<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weile.casualgames.game.RankActivity"
    android:orientation="vertical"
    android:background="@mipmap/ic_rank_bg">
<!--    <include
        android:id="@+id/top_navigation"
        layout="@layout/top_navigation"/>-->
    
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/space_20">
       <RelativeLayout
           android:id="@+id/rl_back"
           android:layout_width="@dimen/space_60"
           android:layout_height="wrap_content">
       <ImageView
           android:id="@+id/iv_back"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@mipmap/btn_back"
           android:layout_alignParentLeft="true"
           android:layout_marginLeft="@dimen/space_15"/>
       </RelativeLayout>
       <TextView
           android:id="@+id/iv_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:textSize="@dimen/text_size_17"
           android:textColor="@color/game_user_vip_text"
           android:text="@string/game_menu_rank"></TextView>
   </RelativeLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTodayRank"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_30"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/rank_today_flowers_title"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/game_user_vip_text"
            android:background="@drawable/shape_rank_navigation_left_bg"
            />

        <TextView
            android:id="@+id/tvYesterdayRank"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_30"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/rank_yestoday_flowers_title"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/game_user_vip_text"
            android:background="@drawable/shape_rank_navigation_center_bg"/>

        <TextView
            android:id="@+id/tvCelebrityList"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_30"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/rank_celebrity_list_title"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/game_user_vip_text"
            android:background="@drawable/shape_rank_navigation_right_bg" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>
