<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_50">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="60dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:src="@mipmap/login_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_game_rule_title"
            android:textColor="@color/common_333333"
            android:textSize="@dimen/space_18" />


        <LinearLayout
            android:id="@+id/ll_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone">

            <TextView
                android:id="@+id/iv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_15"
                android:text="@string/userinfo_edit_submit"
                android:textColor="@color/common_666666"
                android:textSize="@dimen/space_16" />
        </LinearLayout>
    </RelativeLayout>


    <View
        style="@style/divider_gradient_line"
        android:layout_marginTop="@dimen/space_50" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_51"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_setting_game_rule_introduce"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15">

                <TextView
                    style="@style/userinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_game_rule_introduce" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_arrow_right" />
            </RelativeLayout>

            <View
                style="@style/divider_line"
                android:layout_marginLeft="@dimen/space_15" />

            <RelativeLayout
                android:id="@+id/rl_setting_game_rule_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15">

                <TextView
                    style="@style/userinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_game_rule_friends" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_arrow_right" />
            </RelativeLayout>

            <View
                style="@style/divider_line"
                android:layout_marginLeft="@dimen/space_15" />

            <RelativeLayout
                android:id="@+id/rl_setting_game_rule_gold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"

                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15">

                <TextView
                    style="@style/userinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_game_rule_gold" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_arrow_right" />
            </RelativeLayout>

            <View
                style="@style/divider_line"
                android:layout_marginLeft="@dimen/space_15" />

            <RelativeLayout
                android:id="@+id/rl_setting_game_rule_kitchen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15">

                <TextView
                    style="@style/userinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_game_rule_kitchen" />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_arrow_right" />
            </RelativeLayout>

            <View
                style="@style/divider_line"
                android:layout_marginLeft="@dimen/space_15" />

            <RelativeLayout
                android:id="@+id/rl_setting_game_rule_contact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginLeft="@dimen/space_15"
                android:layout_marginRight="@dimen/space_15">

                <TextView
                    style="@style/userinfo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_game_rule_contact" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_arrow_right" />
            </RelativeLayout>

            <View
                style="@style/divider_line"
                android:layout_marginLeft="@dimen/space_15" />



        </LinearLayout>


</FrameLayout>
